--- a/assets/main.css
+++ b/assets/main.css
@@ -54,7 +54,7 @@ Grid
 }
 body{
     background-color:black;
-    background-image:url("img/sunset.jpg");
+    background-image:url("img/SPCOrganFacade.webp");
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: top;
